# sector-flow

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
src/analytics/: flow.py  returns.py  rrg.py
src/data/: cache.py  constituents.py  jpx_investor.py  sectors.py  stock_loader.py  stooq_loader.py  theme_loader.py  themes.py
src/views/: drilldown.py  heatmap.py  investor_flow.py  mobile.py  rrg_chart.py  share_trend.py
