[project]
name = "sector-flow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "xlrd>=2.0.2",
    "yfinance>=1.3.0",
]
